# stm32-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stm32_mcp/: board_map.py  build.py  flash.py  live_memory.py  serial_bridge.py  serial_client.py  serial_sequence.py  serial_tools.py  server.py  toolchain.py
