[project]
name = "stm32-mcp"
version = "0.1.0"
description = "MCP server for STM32 build, flash, and serial communication"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyserial>=3.5",
]

[project.scripts]
stm32-mcp = "stm32_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stm32_mcp"]
